[gd_scene load_steps=9 format=3 uid="uid://u9k4t2m1c8x7b"]

[ext_resource type="Script" uid="uid://h8k2m5n1v4x9b" path="res://scripts/ui/main_menu.gd" id="1_main_menu_script"]
[ext_resource type="PackedScene" uid="uid://g4j2m6p8n1s5c" path="res://scenes/ui/settings_panel.tscn" id="2_settings_panel"]
[ext_resource type="AudioStream" uid="uid://cuqrh0e25x03t" path="res://audio/player/FlashlightOnOff.wav" id="3_click_sfx"]
[ext_resource type="AudioStream" uid="uid://de7fbgim83hix" path="res://audio/player/steps/steps1.wav" id="4_hover_sfx"]
[ext_resource type="AudioStream" uid="uid://bw2i4dg2ggrog" path="res://audio/MusicEtc/CreepyAmbient.wav" id="5_menu_music"]
[ext_resource type="PackedScene" uid="uid://cc6ehxxoauhyn" path="res://scenes/cycles/level_01.tscn" id="6_level_01"]

[sub_resource type="Gradient" id="Gradient_menu"]
offsets = PackedFloat32Array(0, 0.55, 1)
colors = PackedColorArray(0.07, 0.09, 0.12, 1, 0.12, 0.16, 0.14, 1, 0.3, 0.21, 0.14, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_menu"]
gradient = SubResource("Gradient_menu")
width = 1920
height = 1080
fill = 1
fill_from = Vector2(0.2, 0.2)
fill_to = Vector2(0.8, 0.7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.09, 0.8)
border_width_all = 2
border_color = Color(0.55, 0.45, 0.35, 0.9)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_left = 16
corner_radius_bottom_right = 16
content_margin_left = 26
content_margin_top = 20
content_margin_right = 26
content_margin_bottom = 20

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_main_menu_script")
new_game_scene = ExtResource("6_level_01")
hover_sfx = ExtResource("4_hover_sfx")
click_sfx = ExtResource("3_click_sfx")
menu_music = ExtResource("5_menu_music")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_menu")
expand_mode = 1
stretch_mode = 5

[node name="Shade" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25)

[node name="MainPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -260.0
offset_right = 360.0
offset_bottom = 260.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
separation = 16

[node name="Title" type="Label" parent="MainPanel/VBox"]
layout_mode = 2
text = "Едок. Петля."
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="MainPanel/VBox"]
layout_mode = 2
alignment = 1
separation = 10

[node name="NewGameButton" type="Button" parent="MainPanel/VBox/Buttons" groups=["menu_button"]]
layout_mode = 2
text = "Новая игра"

[node name="ContinueButton" type="Button" parent="MainPanel/VBox/Buttons" groups=["menu_button"]]
layout_mode = 2
text = "Продолжить"

[node name="SettingsButton" type="Button" parent="MainPanel/VBox/Buttons" groups=["menu_button"]]
layout_mode = 2
text = "Настройки"

[node name="CreditsButton" type="Button" parent="MainPanel/VBox/Buttons" groups=["menu_button"]]
layout_mode = 2
text = "Авторы"

[node name="ExitButton" type="Button" parent="MainPanel/VBox/Buttons" groups=["menu_button"]]
layout_mode = 2
text = "Выйти из игры"

[node name="SettingsPanel" parent="." instance=ExtResource("2_settings_panel")]

[node name="CreditsPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -300.0
offset_right = 420.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
separation = 12

[node name="Title" type="Label" parent="CreditsPanel/VBox"]
layout_mode = 2
text = "Авторы"
horizontal_alignment = 1

[node name="CreditsScroll" type="ScrollContainer" parent="CreditsPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="CreditsText" type="VBoxContainer" parent="CreditsPanel/VBox/CreditsScroll"]
layout_mode = 2
separation = 8

[node name="Line1" type="Label" parent="CreditsPanel/VBox/CreditsScroll/CreditsText"]
layout_mode = 2
text = "Разработка:"

[node name="Line2" type="Label" parent="CreditsPanel/VBox/CreditsScroll/CreditsText"]
layout_mode = 2
text = "- Имя Фамилия"

[node name="Line3" type="Label" parent="CreditsPanel/VBox/CreditsScroll/CreditsText"]
layout_mode = 2
text = "Арт и визуал:"

[node name="Line4" type="Label" parent="CreditsPanel/VBox/CreditsScroll/CreditsText"]
layout_mode = 2
text = "- Имя Фамилия"

[node name="Line5" type="Label" parent="CreditsPanel/VBox/CreditsScroll/CreditsText"]
layout_mode = 2
text = "Музыка и звук:"

[node name="Line6" type="Label" parent="CreditsPanel/VBox/CreditsScroll/CreditsText"]
layout_mode = 2
text = "- Имя Фамилия"

[node name="Line7" type="Label" parent="CreditsPanel/VBox/CreditsScroll/CreditsText"]
layout_mode = 2
text = "Спасибо за игру"

[node name="BackButton" type="Button" parent="CreditsPanel/VBox" groups=["menu_button"]]
layout_mode = 2
text = "Назад"

[node name="ConfirmPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -140.0
offset_right = 280.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="ConfirmPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
separation = 12

[node name="Message" type="Label" parent="ConfirmPanel/VBox"]
layout_mode = 2
text = ""
horizontal_alignment = 1
autowrap_mode = 2

[node name="Buttons" type="HBoxContainer" parent="ConfirmPanel/VBox"]
layout_mode = 2
alignment = 1
separation = 12

[node name="YesButton" type="Button" parent="ConfirmPanel/VBox/Buttons" groups=["menu_button"]]
layout_mode = 2
text = "Да"

[node name="NoButton" type="Button" parent="ConfirmPanel/VBox/Buttons" groups=["menu_button"]]
layout_mode = 2
text = "Нет"

[node name="SfxPlayer" type="AudioStreamPlayer" parent="."]
bus = "SFX"
